<resources>
    <string name="app_name">My Karachi</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>
    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="hint_sign_up">Don\'t have an account? Sign up.</string>
    <string name="SignUp">Sign Up</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    // DIALOG - SIGN OUT CONFIRMATION
    <string name="dialog_title">Confirmation</string>
    <string name="dialog_message">Do you wish to sign out?</string>

    // GOOGLE MAPS API KEY
    <string name="google_maps_API_key">AIzaSyCTVj85sRTU8UN3kf8iuEJWDz_sxQo3RG0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Updates Fragment</string>
    <string-array name="Traffic_Jam_Reasons">
        <item>Vehicle Clash</item>
        <item>Road Breakdown</item>
        <item>Road Construction</item>
        <item>Govt. Vehicle Protocol</item>
        <item>Criminal Activity</item>
        <item>Dharna</item>
        <item>Incorrect Parking</item>
        <item>Manual Traffic Control</item>
    </string-array>
</resources>
